--- a/index.html
+++ b/index.html
@@ -2,164 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML Generator - Shopify Product Metafield HTML Generator</title>
+    <title>HTML Editor - Shopify HTML Editor for Metafields and Section templates</title>
     <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/bootswatch@5.1.3/dist/cerulean/bootstrap.min.css'>
     <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css'>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.5.1/build/styles/github.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.18.9/jodit.min.css"/>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-<div class="wysiwyg-builder p-5">
-    <h1 class="h3 mb-2">Shopify Product Metafield HTML Generator</h1>
-    <h2 class="h6"><i class="fa-brands fa-github"></i> <a class="text-muted" href="https://github.com/webforward/shopify-wysiwyg" target="_blank">https://github.com/webforward/shopify-wysiwyg</a>
-    </h2>
+<div class="container ms-0">
+    <div class="wysiwyg-builder p-5">
+        <h1 class="h3 mb-2">Shopify HTML Editor for Metafields and Section templates</h1>
+        <h2 class="h6"><i class="fa-brands fa-github"></i> <a class="text-muted"
+                                                              href="https://github.com/webforward/shopify-wysiwyg"
+                                                              target="_blank">https://github.com/webforward/shopify-wysiwyg</a>
+        </h2>
 
-    <div class="d-flex mt-4 mb-3">
+        <div class="d-flex mt-4 mb-3">
 
-        <button class="how-to-use btn btn-success text-white me-3"><i class="fa-solid fa-circle-question me-1"></i>
-            How to use
-        </button>
+            <div class="btn-group" role="group">
+                <button class="import-modal btn btn-primary"><i class="fa-solid fa-file-import me-1"></i> Import HTML
+                </button>
+                <button class="export-modal btn btn-info text-white fw-bold me-3">Export HTML <i
+                        class="fa-solid fa-file-export ms-1"></i></button>
+            </div>
 
-        <div class="btn-group me-3" role="group">
-            <button class="import-modal btn btn-primary"><i class="fa-solid fa-file-import me-1"></i> Import HTML</button>
-            <button class="export-modal btn btn-info text-white fw-bold me-3">Export HTML <i class="fa-solid fa-file-export ms-1"></i></button>
+            <button class="clear-wysiwyg btn btn-warning text-white ms-5"><i class="fa-solid fa-trash-can me-1"></i>
+                Clear
+                WYSIWYG
+            </button>
+
         </div>
 
-        <button class="clear-wysiwyg btn btn-warning text-white ms-5"><i class="fa-solid fa-trash-can me-1"></i> Clear
-            WYSIWYG
-        </button>
+        <div class="mb-2">
+            <textarea id="wysiwyg"></textarea>
+        </div>
+
+        <p class="text-info fw-light"><small>All information entered is stored within your browsers
+            <a target="_blank" href="https://dev.to/arikaturika/javascript-local-storage-beginner-s-guide-1gk1">local
+                storage object</a>.
+            Information is not stored as a cookie and is not shared or uploaded to any server or 3rd party.</small></p>
+
+        <p class="text-primary mb-0">Thank you for using, <a class="text-primary"
+                                                             title="Shopify Developer"
+                                                             href="https://www.webfwd.co.uk/"
+                                                             target="_blank">Webforward</a>.
+        </p>
 
     </div>
-
-    <textarea id="wysiwyg"></textarea>
-
-    <p class="text-info fw-light"><small>All information entered is stored within your browsers
-        <a target="_blank" href="https://dev.to/arikaturika/javascript-local-storage-beginner-s-guide-1gk1">local storage object</a>.
-        Information is not stored as a cookie and is not shared or uploaded to any server or 3rd party.</small></p>
-
-    <p class="text-primary mb-0">Thank you for using, <a class="text-primary"
-                                                                                    title="Shopify Developer"
-                                                                                    href="https://www.webfwd.co.uk/"
-                                                                                    target="_blank">Webforward</a>.
-    </p>
-
 </div>
-
-<div class="instructions p-5 d-none">
-    <div class="row">
-        <div class="col-md-7">
-            <h2 class="font-bold text-primary">How to use:</h2>
-
-            <h3 class="my-4"><strong>1.</strong> Create a product metafield</h3>
-
-            <div class="px-3">
-                <p>Open your Shopify admin dashboard, click <strong>Settings</strong> at the bottom left, click
-                    <strong>Metafield</strong>
-                    towards the bottom on the left-hand side and then choose <strong>Products</strong> on the right.
-                </p>
-
-                <p>At the top right, click <strong>Add definition</strong> to set up a new product metafield.</p>
-
-                <p>Give the metafield a name which will be displayed on the product add and edit pages.</p>
-
-                <p>Set a <strong>namespace and key</strong>, if you do not know what to put here, we generally use
-                    something
-                    like <strong>settings.infotable</strong>. Remember what you put here as it will be needed in
-                    step 2.</p>
-
-                <p>Tick to <strong>Expose this metafield to Storefront API requests</strong>.</p>
-
-                <p class="text-info">You can add the table generator website address in to the <strong>description</strong> field to remember for future use if you wish.</p>
-
-                <p>And finally, click <strong>Select content type</strong> and choose <strong>JSON</strong>.</p>
-            </div>
-
-            <h3 class="my-4"><strong>2.</strong> Create a theme snippet to display the table</h3>
-
-            <div class="px-3">
-                <p>In your Shopify admin dashboard, navigate to <strong>Online Store &gt; Themes</strong>. On your current active theme,
-                    click the
-                    <strong>Actions</strong> drop down and choose <strong>Edit code</strong>.</p>
-                <p>Inside <strong>Snippets</strong> click <strong>Add a new snippet</strong>, name it <strong>specification-table</strong>
-                    and paste the following code:<br/>
-                    <span class="text-info">Don't forget to change <strong>namespace.metakey</strong> to the namespace and meta key you created in step 1.</span>
-                </p>
-
-                <pre class="border px-4"><code class="language-php">{% if product.metafields.namespace.metakey.value.size &#x3E; 0 %}
-    &#x3C;table class=&#x22;table table-bordered&#x22;&#x3E;
-        {% for row in product.metafields.namespace.metakey.value %}
-            &#x3C;tr&#x3E;
-                {% if row.size == 1 %}
-                    &#x3C;th colspan=&#x22;999&#x22;&#x3E;{{ row.0 }}&#x3C;/th&#x3E;
-                {% else %}
-                    {% for col in row %}
-                        &#x3C;td&#x3E;{{ col | last }}&#x3C;/td&#x3E;
-                    {% endfor %}
-                {% endif %}
-            &#x3C;/tr&#x3E;
-        {% endfor %}
-    &#x3C;/table&#x3E;
-{% endif %}</code></pre>
-
-                <p>You can now use this snippet in your product templates or product snippets with the following
-                    code:</p>
-
-                <pre class="border px-4"><code class="language-php">{% render 'specification-table' %}</code></pre>
-
-            </div>
-
-            <h3 class="my-4"><strong>3.</strong> Generate a table for your product</h3>
-
-            <div class="px-3">
-                <p>Populate the table maker at the top of this page, you can add columns and rows, you can even drag
-                    the
-                    rows
-                    around.</p>
-
-                <p>Once you have finished making your table, click the <strong>Export JSON</strong> button to
-                    generate the
-                    code
-                    you need for your Shopify product metafield.</p>
-
-                <p>Edit your product on your Shopify admin, scroll to the bottom of the page and paste the generated JSON data
-                    into the
-                    JSON
-                    metafield you created in step 1.</p>
-
-            </div>
-
-            <h3 class="my-4"><strong>4.</strong> Edit an already existing table</h3>
-
-            <div class="px-3">
-                <p>To edit an already generated table, copy the JSON data from the JSON metafield on the product in
-                    your
-                    Shopify
-                    admin paste it in to the <strong>Import JSON</strong> box which pops up when clicking the
-                    <strong>Import
-                        JSON</strong> at the top of this page.</p>
-
-                <p>Repeat step 3.</p>
-            </div>
-
-            <h4 class="text-primary my-5">I hope this helps you as much as it helped us.</h4>
-
-        </div>
-
-        <div class="col-md-5">
-            <h6>Shopify Admin Product Metafield</h6>
-            <img class="img-fluid mb-3" src="assets/example2.png"/>
-
-            <h6>Shopify Frontend Product View</h6>
-            <img class="img-fluid" src="assets/example1.png"/>
-        </div>
-
-    </div>
-
-</div>
-
 <div class="modal" id="export-modal" tabindex="-1">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -201,7 +93,6 @@
 
 <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
 <script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js'></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jodit/3.18.9/jodit.min.js"></script>
 <script src="./script.js"></script>
 
