--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             </div>
 
             <button class="clear-wysiwyg btn btn-warning text-white ms-5"><i class="fa-solid fa-trash-can me-1"></i>
-                Clear
-                WYSIWYG
+                Clear Editor
             </button>
 
         </div>
